# bkg.town

./: AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md
.opencode/: opencode.json
bkg/: .env.example  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
bkg/apps/jobs/: Cargo.toml
bkg/apps/web/: Cargo.toml
bkg/docs/: ARCHITECTURE.md  RELEASE-EVIDENCE.md  SECURITY.md
docs/architecture/: external-components.md  overview.md  stack.md
