[workspace]
resolver = "2"
members = [
    "apps/web",
    "apps/jobs",
    "packages/agents",
    "packages/ai",
    "packages/animation-engine",
    "packages/audio-engine",
    "packages/auth",
    "packages/config",
    "packages/contracts",
    "packages/database",
    "packages/game-docs",
    "packages/game-engine",
    "packages/level-engine",
    "packages/live-events",
    "packages/observability",
    "packages/pixel-engine",
    "packages/testing",
    "packages/ui",
    "packages/validation",
    "packages/voice",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bkg-platform/bkg"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = "0.5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Redis (for BullMQ-style queues)
redis = { version = "0.25", features = ["tokio-comp"] }

# Utilities
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 0